some fixes in style.css, to allow wrap counter, and we back to old 'line', also new menu

--- a/src/dotnetconfpl/dotnetconfpl/Content/CustomStyle.css
+++ b/src/dotnetconfpl/dotnetconfpl/Content/CustomStyle.css
@@ -41,12 +41,3 @@ a.image-link:hover {
 #countbox {
     padding-top: 20px !important;
 }
-
-.linehr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
