--- a/src/dotnetconfpl/dotnetconfpl/Content/countdown/css/IE_6.css
+++ b/src/dotnetconfpl/dotnetconfpl/Content/countdown/css/IE_6.css
@@ -129,8 +129,7 @@
 	width: 94px;
 }
 
-.line{
-	width: 432px;
+.line{	
 	margin-left:auto;
 	margin-right: auto;
 	background-color: #000;
