--- a/src/dotnetconfpl/dotnetconfpl/Content/countdown/css/style.css
+++ b/src/dotnetconfpl/dotnetconfpl/Content/countdown/css/style.css
@@ -86,8 +86,7 @@ margin-right: auto;
 		}
 
 .line{
-	margin: 20px 0;
-	width: 432px;
+	margin: 20px 0;	
 	margin-left:auto;
 	margin-right: auto;
 	height: 1px;
@@ -101,8 +100,7 @@ margin-right: auto;
 	padding-top: 80px;
 	color: #fff;
 	font-family: Myriad Pro,Helvetica,sans-serif;
-	font-size: 50px;
-	width: 432px;
+	font-size: 50px;	
 	height: 100px;
 	margin-left:auto;
 	margin-right: auto;
